# hid-dualsense-edge

./: Cargo.toml  build.rs
dll-exports/: Cargo.toml
dll-exports/src/: lib.rs
src/: dll.rs  lib.rs
